--- a/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
+++ b/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
@@ -15,8 +15,12 @@
                     </h4>
                     <h6 class="mt-4">Já conhece o Salão de Imóveis?</h6>
             
-                    <h6 class="mt-2">
+                    <!-- <h6 class="mt-2">
                     A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
+                    </h6> -->
+
+                    <h6 class="mt-2">
+                    A iniciativa tem o objetivo de promover condições especiais para o sonho da casa própria.
                     </h6>
             
                     <div class="mt-4">
