--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -280,8 +280,11 @@
         Salão de Imóveis - Rio de Janeiro 2023
       </h4>
       <h6 class="mt-4">Já conhece o Salão de Imóveis?</h6>
-      <h6 class="mt-2">
+      <!-- <h6 class="mt-2">
         A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
+      </h6> -->
+      <h6 class="mt-2">
+        A iniciativa tem o objetivo de promover condições especiais para o sonho da casa própria.
       </h6>
       <div class="mt-4">
         <div class="d-flex">
@@ -314,12 +317,12 @@
       <!-- <div class="text-center">
         <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
-      <div class="text-center mt-4">
+      </div> -->
+       <!-- <div class="text-center mt-4">
         <span style="font-size: 14px; color: white;">Colaborador Rede D'or - Público Geral</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
-      <div class="text-center mt-4">
+      </div> -->
+       <!-- <div class="text-center mt-4">
         <span style="font-size: 14px; color: white;">Membros do CRC-RJ - Público Geral</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div> -->
@@ -359,6 +362,14 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4 col-12">
+      <div class="d-flex flex-column justify-content-center align-items-center p-4">
+        <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;">
+        &nbsp;&nbsp;
+        <p class="sub-title">Homeflix Serviços Imobiliários LTDA<br>
+          CRECI/RJ 009440/O</p>
+      </div>
+     </div>
     <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button>
   </div>
 </div>
