--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -176,8 +176,11 @@
       </h4>
       <h6 class="mt-4">Já conhece o Salão de Imóveis?</h6>
 
-      <h6 class="mt-2">
+      <!-- <h6 class="mt-2">
         A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
+      </h6> -->
+      <h6 class="mt-2">
+        A iniciativa tem o objetivo de promover condições especiais para o sonho da casa própria.
       </h6>
 
       <div class="mt-4">
@@ -215,14 +218,14 @@
       <!-- <div class="text-center">
         <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
+      </div> -->
 
-      <div class="text-center mt-4">
+      <!-- <div class="text-center mt-4">
         <span style="font-size: 14px; color: white;">Colaborador Rede D'or - Público Geral</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
+      </div> -->
 
-      <div class="text-center mt-4">
+      <!-- <div class="text-center mt-4">
         <span style="font-size: 14px; color: white;">Membros do CRC-RJ - Público Geral</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div> -->
@@ -243,13 +246,12 @@
 
     <!-- <hr class="hr-parceiros"> -->
 
-    <!-- <div class="text-center mt-4 mb-4">
-      <p class="title">Participação</p>
-
-      <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
-      <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
-      <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;">
-    </div> -->
+    <!-- <div class="text-center mt-4 mb-4"> -->
+      <!-- <p class="title">Participação</p> -->
+      <!-- <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;"> -->
+      <!-- <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;"> -->
+      <!-- <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;"> -->
+    <!-- </div> -->
 
     <!-- <hr class="hr-parceiros"> -->
 
@@ -292,6 +294,14 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-md-4 col-12">
+     <div class="d-flex flex-column justify-content-center align-items-center p-4">
+       <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;">
+       &nbsp;&nbsp;
+       <p class="sub-title">Homeflix Serviços Imobiliários LTDA<br>
+         CRECI/RJ 009440/O</p>
+     </div>
     </div>
     <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button>
   </div>
