Remoção de logos homer e remoção de busca de imóvel

--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -332,7 +332,7 @@
 
 <div class="sixth col-md-12 p-4">
   <div class="d-flex flex-row flex-wrap text-center">
-    <div class="col-md-4 col-12">
+    <div class="col-md-6">
       <div class="column p-4">
         <img class="pb-5" src="/assets/img/logo_crediall_complete.png">
         <div class="d-flex flex-row justify-content-center pb-5">
@@ -351,7 +351,7 @@
         <p class="sub-title">Tel: (21) 98283-0243</p>
       </div>
     </div>
-    <div class="col-md-4 col-12">
+    <div class="col-md-6">
       <div class="d-flex justify-content-center">
         <div class="column p-4">
           <div class="d-flex flex-row text-start pt-4" style="max-width: 600px;">
@@ -362,14 +362,14 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-12">
-      <div class="d-flex flex-column justify-content-center align-items-center p-4">
-        <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;">
-        &nbsp;&nbsp;
-        <p class="sub-title">Homeflix Serviços Imobiliários LTDA<br>
-          CRECI/RJ 009440/O</p>
-      </div>
-     </div>
+    <!-- <div class="col-md-6 col-12"> -->
+      <!-- <div class="d-flex flex-column justify-content-center align-items-center p-4"> -->
+        <!-- <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;"> -->
+        <!-- &nbsp;&nbsp; -->
+        <!-- <p class="sub-title">Homeflix Serviços Imobiliários LTDA<br>
+          CRECI/RJ 009440/O</p> -->
+      <!-- </div> -->
+     <!-- </div> -->
     <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button>
   </div>
 </div>
