--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -168,6 +168,12 @@ select {
   color: #00479C;
 }
 
+.sub-title-banner {
+  font-weight: 500;
+  font-size: 20px;
+  color: #00479C;
+}
+
 .sub-title {
   font-weight: 700;
   font-size: 15px;
