--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -4,9 +4,11 @@
 <div id="findProperty" class="first col-md-12">
     
    <div id="web">
-     <div class="d-flex flex-column justify-content-center align-items-center" style="height: 80vh; width: 60%; position: absolute; left: 50px;">
-       <p class="title pb-3 mt-5">Encontre um imóvel próximo de você!</p>
-       <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-75">
+     <div class="d-flex flex-column justify-content-center" style="height: 80vh; width: 60%; position: absolute; left: 50px; margin-left: 100px;">
+       <p class="title pb-3 mt-5">O Evento acabou mas seu sonho continua aqui!</p>
+         <p class="text-left sub-title-banner">Cadastre-se e nossos consultores lhe passarão as <br>opções de imóveis na sua região!</p>
+         <button class="btn btn-md mt-4" style="color: white; background-color: #C30000; width: 180px;" (click)="acessarPipefy()">Cadastre-se agora!</button>
+       <!-- <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-75">
          <div class="input-group w-75">
            <div class="search-form-field" style="width: 99.5%; border-radius: 10px 10px 0px 0px;">
              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-map-marker-alt"></i>&nbsp;Bairro</label>
@@ -64,7 +66,7 @@
          <button type="submit" class="simple-elevated-red-button btn mt-5">
            Buscar imóveis
          </button>
-       </form>
+       </form> -->
      </div>
      <div class="banner-img w-100"></div>
    </div>
@@ -72,9 +74,11 @@
     <!-- MOBILE FORM -->
 
    <div id="mobile" class="fourth col-md-12 p-5">
-     <div class="d-flex flex-column align-items-center text-center">
-       <p class="title pb-3 mt-5">Encontre um imóvel próximo de você!</p>
-       <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-100">
+     <div class="d-flex flex-column">
+      <p class="title pb-3 mt-5">O Evento acabou mas seu sonho continua aqui!</p>
+      <p class="text-left sub-title-banner">Cadastre-se e nossos consultores lhe passarão as <br>opções de imóveis na sua região!</p>
+      <button class="btn btn-md mt-4" style="color: white; background-color: #C30000; width: 180px;" (click)="acessarPipefy()">Cadastre-se agora!</button>
+       <!-- <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-100">
         <div class="input-group w-100 mb-3">
          <div class="search-form-field rounded-3 w-100">
            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-map-marker-alt"></i>&nbsp;Bairro</label>
@@ -134,7 +138,7 @@
         <button type="submit" class="simple-elevated-red-button btn mt-5">
           Buscar imóveis
         </button>
-       </form>
+       </form> -->
      </div>
    </div>
 
@@ -208,12 +212,12 @@
         </div>
       </div>
 
-      <hr>
+      <!-- <hr> -->
 
-      <div class="text-center">
-        <span style="font-size: 14px; color: white;">Inscreva-se gratuitamente</span><br>
-        <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
+      <!-- <div class="text-center"> -->
+        <!-- <span style="font-size: 14px; color: white;">Inscreva-se gratuitamente</span><br> -->
+        <!-- <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button>  -->
+      <!-- </div> -->
 
       <!-- <div class="text-center">
         <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
@@ -240,7 +244,7 @@
       <p class="title">Realização</p>
 
       <img class="m-4" src="/assets/img/kreditos-imobi.png" style="width: 150px; margin-right: 20px;">
-      <img class="m-4" src="/assets/img/logo_homer.png" style="width: 120px; margin-right: 20px;">
+      <!-- <img class="m-4" src="/assets/img/logo_homer.png" style="width: 120px; margin-right: 20px;"> -->
       <img class="m-4" src="/assets/img/logo_crediall_complete.png" style="width: 150px;">
     </div>
 
@@ -265,7 +269,7 @@
 
 <div class="sixth col-md-12 p-4">
   <div class="d-flex flex-row flex-wrap text-center">
-    <div class="col-md-4 col-12">
+    <div class="col-md-6 col-12">
       <div class="column p-4">
         <img class="pb-5" src="/assets/img/logo_crediall_complete.png">
         <div class="d-flex flex-row justify-content-center pb-5">
@@ -284,7 +288,7 @@
         <p class="sub-title">Tel: (21) 98283-0243</p>
       </div>
     </div>
-    <div class="col-md-4 col-12">
+    <div class="col-md-6 col-12">
       <div class="d-flex justify-content-center">
         <div class="column p-4">
           <div class="d-flex flex-row text-start pt-4" style="max-width: 600px;">
@@ -295,15 +299,15 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-12">
-     <div class="d-flex flex-column justify-content-center align-items-center p-4">
-       <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;">
-       &nbsp;&nbsp;
+    <!-- <div class="col-md-4 col-12"> -->
+     <!-- <div class="d-flex flex-column justify-content-center align-items-center p-4"> -->
+       <!-- <img src="/assets/img/homer.png" style="width: 120px; margin-right: 20px;"> -->
+       <!-- &nbsp;&nbsp;
        <p class="sub-title">Homeflix Serviços Imobiliários LTDA<br>
-         CRECI/RJ 009440/O</p>
-     </div>
-    </div>
-    <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button>
+         CRECI/RJ 009440/O</p> -->
+     <!-- </div> -->
+    <!-- </div> -->
+    <!-- <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button> -->
   </div>
 </div>
 
