feature/multi-bank

--- a/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
+++ b/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
@@ -176,57 +176,84 @@
         </div>
       </form>
     </div>
+    
     <!-- TABLE -->
-     <div *ngIf="installments.length > 0" class="col-md-8 col-12 p-3 flex-fill">
-       <div class="card shadow-sm border-0 p-3">
-         <div class="table-responsive">
-           <div class="t-head mb-2">
-            <div class="d-flex justify-content-around">
-              <th class="col-2 fw-normal text-muted">Banco</th>
-              <th class="col-2 fw-normal text-muted">Parcela</th>
-              <th class="col-2 fw-normal text-muted">Amortização</th>
-              <th class="col-2 fw-normal text-muted">Juros</th>
-              <th class="col-2 fw-normal text-muted">Prestação Final</th>
-              <th class="col-2 fw-normal text-muted">Saldo Devedor</th>
+
+    <div *ngIf="banks.length > 0" class="col-md-8 col-12 p-3 flex-fill">
+      <div class="card shadow-sm border-0 p-3">  
+        
+        <div *ngFor="let col of banks; let i = index;" class="card bg-light shadow-sm border-0 p-4 mb-2" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse-' + i" [attr.aria-expanded]="false" [attr.aria-controls] = "'collapse-' + i">
+          
+          <div class="d-flex justify-content-between">
+
+            <img *ngIf="col.codigoBanco == '104'" src="/assets/img/logo_caixa.png" style="width: 120px;">
+            <img *ngIf="col.codigoBanco == '001'" src="/assets/img/logo_bb.png" class="rounded" style="width: 120px;">
+            <img *ngIf="col.codigoBanco == '033'" src="/assets/img/logo_santander.png" class="rounded" style="width: 120px;">
+            <img *ngIf="col.codigoBanco == '237'" src="/assets/img/logo_bradesco.png" class="rounded" style="width: 120px;">
+            <img *ngIf="col.codigoBanco == '341'" src="/assets/img/logo_itau.png" style="height: 40px; width: 40px;">
+
+            <div class="fw-semibold text-end w-100" style="color: #0F71F2;">
+              <label class="text-uppercase pb-1 w-100">Renda Mínima: {{ col.rendaMinima }}</label>
             </div>
-           </div>
-           <!-- ROWS -->
-           <div *ngFor="let col of installments; let i = index;" class="t-body mb-2">
-             <div class="d-flex bg-light">
-               <td class="col-2" class="col-2 d-flex align-items-center justify-content-start p-2">
-                 <img src="/assets/img/logo_caixa-3.png" style="width: 80px;">
-               </td>
-               <td class="col-2 d-flex align-items-center justify-content-between" style="height: 80px;">
-                {{col.parcela}}
-         
-              </td>
-               <td class="col-2 d-flex align-items-center justify-content-start">
-                 {{col.amortizacao}}
-               </td>
-               <td class="col-2 d-flex align-items-center justify-content-start">
-                 {{col.juros}}
-               </td>
-               <td class="col-2 d-flex align-items-center justify-content-start">
-                 {{col.pestacaoFinal}}
-               </td>
-               <td class="col-2 d-flex align-items-center justify-content-start">
-                 {{col.saldoDevedor}}
-               </td>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
+          </div>
+
+          <div [attr.id]="'collapse-' + i" class="collapse">
+
+            <div class="card mt-3 border-0">
+              <div class="table-responsive">
+                <div class="t-head m-3">
+                 <div class="d-flex justify-content-around">
+                   <th class="col-2 fw-normal text-muted">Parcela</th>
+                   <th class="col-2 fw-normal text-muted">Amortização</th>
+                   <th class="col-2 fw-normal text-muted">Juros</th>
+                   <th class="col-2 fw-normal text-muted">Prestação Final</th>
+                   <th class="col-2 fw-normal text-muted">Saldo Devedor</th>
+                 </div>
+                </div>
+  
+                <!-- ROWS -->
+  
+                <div *ngFor="let installment of banks[i].parcelas" class="t-body mb-2">
+                  <div class="d-flex justify-content-around bg-light">
+                    <td class="col-2 d-flex align-items-center justify-content-between" style="height: 80px;">
+                     {{installment.parcela}}
+                    </td>
+                    <td class="col-2 d-flex align-items-center justify-content-start">
+                      {{installment.amortizacao}}
+                    </td>
+                    <td class="col-2 d-flex align-items-center justify-content-start">
+                      {{installment.juros}}
+                    </td>
+                    <td class="col-2 d-flex align-items-center justify-content-start">
+                      {{installment.pestacaoFinal}}
+                    </td>
+                    <td class="col-2 d-flex align-items-center justify-content-start">
+                      {{installment.saldoDevedor}}
+                    </td>
+                  </div>
+                </div>
+  
+              </div>
+            </div>
+          </div>
+        </div>  
+
+      </div>
+    </div>
+
      <!-- INITIAL STATE -->
-     <div *ngIf="installments.length == 0 && gettingInstallments == false" class="col-md-8 col-12 p-3 flex-fill">
+
+     <div *ngIf="banks.length == 0 && gettingInstallments == false" class="col-md-8 col-12 p-3 flex-fill">
       <div class="d-flex justify-content-center align-items-center card shadow-sm border-0" style="height: 500px;">
         <div class="fs-4 text-uppercase text-center p-3">
           O resultado da simulação será exibido aqui
         </div>
       </div>
      </div>
+
      <!-- LOADING -->
-     <div *ngIf="gettingInstallments == true && installments.length == 0" class="col-md-8 col-12 p-3 flex-fill">
+
+     <div *ngIf="gettingInstallments == true && banks.length == 0" class="col-md-8 col-12 p-3 flex-fill">
       <div class="d-flex justify-content-center align-items-center card shadow-sm border-0" style="height: 500px;">
         <div class="w-100 p-5 text-center">
           <div class="spinner-border" style="height: 4rem; width: 4rem; color: #012942;"></div>
