--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -259,10 +259,9 @@
 
     <!-- <hr class="hr-parceiros"> -->
 
-    <div class="text-center mt-4">
+    <div class="text-center m-4">
       <p class="title mb-0">Apoio</p>
-
-      <img src="/assets/img/logo_caixa.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/logo_caixa.png" style="width: 150px;">
     </div>
   </div>
 </div>
