--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -261,7 +261,7 @@
 
     <div class="text-center m-4">
       <p class="title mb-0">Apoio</p>
-      <img class="m-4" src="/assets/img/logo_caixa.png" style="width: 150px;">
+      <img class="m-4" src="/assets/img/logo_caixa-2.png" style="width: 150px;">
     </div>
   </div>
 </div>
