--- a/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
+++ b/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
@@ -186,7 +186,7 @@
           
           <div class="d-flex justify-content-between">
 
-            <img *ngIf="col.codigoBanco == '104'" src="/assets/img/logo_caixa.png" style="width: 120px;">
+            <img *ngIf="col.codigoBanco == '104'" src="/assets/img/logo_caixa-2.png" style="width: 120px;">
             <img *ngIf="col.codigoBanco == '001'" src="/assets/img/logo_bb.png" class="rounded" style="width: 120px;">
             <img *ngIf="col.codigoBanco == '033'" src="/assets/img/logo_santander.png" class="rounded" style="width: 120px;">
             <img *ngIf="col.codigoBanco == '237'" src="/assets/img/logo_bradesco.png" class="rounded" style="width: 120px;">
