--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -250,12 +250,12 @@
 
     <!-- <hr class="hr-parceiros"> -->
 
-    <!-- <div class="text-center mt-4 mb-4"> -->
-      <!-- <p class="title">Participação</p> -->
-      <!-- <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;"> -->
-      <!-- <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;"> -->
-      <!-- <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;"> -->
-    <!-- </div> -->
+    <!-- <div class="text-center mt-4 mb-4">
+      <p class="title">Participação</p>
+      <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;">
+    </div> -->
 
     <!-- <hr class="hr-parceiros"> -->
 
